<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--Top search bar-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="10dp">
            <androidx.appcompat.widget.SearchView
                android:id="@+id/topSearchBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@drawable/search_bar_background"
                app:queryHint="Address, City, Neighbourhood..."
                app:searchIcon="@drawable/ic_baseline_search"
                app:closeIcon="@drawable/ic_baseline_close"
                app:commitIcon="@drawable/ic_baseline_search"
                app:iconifiedByDefault="false" />
        </LinearLayout>

        <!--Search box layout-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3">

                <TextView
                    android:id="@+id/text_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:text="@string/find_home_text"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/home_search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/search_bar_background"
                    app:queryHint="Address, City, Neighbourhood..."
                    app:searchIcon="@drawable/ic_baseline_search"
                    app:closeIcon="@drawable/ic_baseline_close"
                    app:commitIcon="@drawable/ic_baseline_search"
                    app:iconifiedByDefault="false" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Progress bar-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical">
                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:indicatorSize="60dp"
                    android:indeterminate="true"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Try again layout-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tryAgainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/network_error_connecting"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonReTryGettingProperties"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/try_again"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/searchResultsView"
            layout="@layout/property_list"
            android:visibility="gone" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>